--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.drawerlayout.widget.DrawerLayout
@@ -130,7 +131,8 @@
                                         app:sliderIndicatorSelectedColor="#5A5A5A"
                                         app:sliderIndicatorUnselectedColor="#FFF"
                                         app:sliderScrollTimeInSec="1"
-                                        app:sliderStartAutoCycle="true" />
+                                        app:sliderStartAutoCycle="true"
+                                        tools:ignore="TooDeepLayout" />
 
                                 </androidx.cardview.widget.CardView>
 
@@ -726,7 +728,7 @@
                     android:orientation="vertical"
                     android:paddingTop="5dp">
 
-                    <com.google.android.material.card.MaterialCardView
+                    <androidx.cardview.widget.CardView
                         android:id="@+id/materialCardView"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
@@ -752,7 +754,7 @@
                         </ImageView>
 
 
-                    </com.google.android.material.card.MaterialCardView>
+                    </androidx.cardview.widget.CardView>
 
 
                     <TextView
