--- a/app/src/main/res/layout/career_statistics_row.xml
+++ b/app/src/main/res/layout/career_statistics_row.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/colorPrimary"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="2dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
                 android:background="@color/colorPrimary"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:padding="8dp">
+                android:padding="2dp">
 
 
                 <LinearLayout
@@ -48,7 +48,8 @@
                         android:gravity="center"
                         android:orientation="horizontal">
 
-                        <de.hdodenhof.circleimageview.CircleImageView
+                        <com.facebook.drawee.view.SimpleDraweeView
+                            android:id="@+id/imgplayername"
                             android:layout_width="0dp"
                             android:layout_height="50dp"
                             android:layout_weight="0.2"
@@ -56,7 +57,7 @@
                             app:civ_border_color="@color/white"
                             app:civ_border_width="2dp">
 
-                        </de.hdodenhof.circleimageview.CircleImageView>
+                        </com.facebook.drawee.view.SimpleDraweeView>
 
                         <TextView
                             android:id="@+id/txtplayerName"
@@ -673,6 +674,6 @@
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
