--- a/app/src/main/res/layout/recycler_view_itemuserplantedshown.xml
+++ b/app/src/main/res/layout/recycler_view_itemuserplantedshown.xml
@@ -19,7 +19,7 @@
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.card.MaterialCardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
@@ -160,7 +160,7 @@
 
             </RelativeLayout>
 
-        </com.google.android.material.card.MaterialCardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
