--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -78,8 +81,7 @@
 
             </TextView>
 
-            <com.google.android.material.card.MaterialCardView
-
+            <androidx.cardview.widget.CardView
                 android:id="@+id/materialCardView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
@@ -111,7 +113,7 @@
 
                 </ImageView>
 
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.cardview.widget.CardView>
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
