career_statistics_row.xml done.

--- a/app/src/main/res/layout/activity_player_history.xml
+++ b/app/src/main/res/layout/activity_player_history.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.appcompat.widget.LinearLayoutCompat
+android:orientation="vertical"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".ui.Activity.CareerStatisticsActivity">
-
+        tools:context=".ui.Activity.PlayerHistoryActivity">
 
         <include
             android:id="@+id/toolbar"
@@ -15,13 +15,12 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvplayerCareer"
+            android:id="@+id/rvplayer"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:visibility="visible">
 
         </androidx.recyclerview.widget.RecyclerView>
 
-
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
