--- a/app/src/main/res/layout/career_statistics_row.xml
+++ b/app/src/main/res/layout/career_statistics_row.xml
@@ -666,6 +666,7 @@
                             app:shimmer_tilt="180">
 
                             <androidx.appcompat.widget.AppCompatButton
+                                android:id="@+id/btnplyrhist"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_gravity="center"
