--- a/app/src/main/res/layout/activity_player_history.xml
+++ b/app/src/main/res/layout/activity_player_history.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-android:orientation="vertical"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".ui.Activity.PlayerHistoryActivity">
 
         <include
