--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="blue">#407AED</color>
     <color name="bg">#DFE3E8</color>
     <color name="yellow">#FFA63E</color>
+    <color name="yellowlight">#E6B67F</color>
     <color name="greenlight">#E8FCEE</color>
     <color name="green">#0AA639</color>
     <color name="blacklight">#505050</color>
