--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -293,7 +293,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/activity_horizontal_marginn"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         app:hintAnimationEnabled="true"
                         app:passwordToggleEnabled="true">
 
@@ -329,7 +329,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/activity_horizontal_marginn"
-                        android:visibility="visible"
+                        android:visibility="gone"
                         app:hintAnimationEnabled="true"
                         app:passwordToggleEnabled="true">
 
@@ -663,6 +663,7 @@
                      </LinearLayout>-->
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:visibility="gone"
                         android:id="@+id/allcollege"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
@@ -695,6 +696,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:visibility="gone"
                         android:id="@+id/alldesignation"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
